syntax = 'proto3';
package protocol;
option go_package = "amongst-bins";

message JoinGame {
	string username = 1;
}
message EchoJoinGame {
	int32 player_id = 1;
}
message PlayerPosition {
	int64 x = 1;
	int64 y = 2;
}
message ClientMovement {
	PlayerPosition player_pos = 1;
}
message ServerPositionUpdate {
	repeated PlayerPosition player_pos = 1;
}
